roles/blog/templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    name: blog
