roles/blog/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: blog
  name: blog
  labels:
    name: blog
spec:
 ports:
 - port: 5050
   targetPort: 80
 selector:
   app: blog
