roles/blog/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-blog
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - codemagnifique.com
      secretName: blog-codemagnifique-tls
  rules:
  - host: codemagnifique.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 5050
